<resources>
    <string name="app_name">DrinksHub</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="header_text"><![CDATA[Meet New People, Family & Friends]]></string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Delivery Address</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="lga">Local Government Area</string>
    <string name="nothing_to_load">Nothing to load</string>
    <string name="drinkshub">Drinks Hub</string>
    <string name="posted">posted</string>
    <string name="shared">shared</string>
    <string name="benz">Nice looking brand new Mercedes Benz</string>
    <string name="action_items">Items</string>
    <string name="Feed">Feed</string>
    <string name="feed">Feed</string>

    <string-array name="navDrawerIcons">
        <item>@drawable/feed</item>
        <item>@drawable/calendar</item>
        <item>@drawable/account</item>
        <item>@drawable/logout</item>
    </string-array>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="token">eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOjUsImlzcyI6Imh0dHA6XC9cL2Fzay5uZXQubmdcL2RyaW5rc2h1YlwvZHJpbmtzaHViLWFwaVwvcHVibGljXC9hcGlcL3YxXC9jdXN0b21lclwvbG9naW4iLCJpYXQiOjE0OTU3MzI4MzQsImV4cCI6MTQ5NTgxOTIzNCwibmJmIjoxNDk1NzMyODM0LCJqdGkiOiIzTTF2S1hQYkVlS0VkcFpoIn0.C0igwWALZSWO06gE3E22Ap1Q_n4u4OfJ83sXpNBSqaY</string>

    <string-array name="navDrawerItems">
        <item>By Product types</item>
        <item>By Pack Type</item>
        <item>Accounts</item>
        <item>Logout</item>
    </string-array>

    <string name="page_1">By Product types</string>
    <string name="page_2">By Pack Type</string>
    <string name="page_3">Accounts</string>
    <string name="page_4">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>

</resources>
