<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:padding="30dp"
        android:layout_margin="30dp"
        android:orientation="vertical"
        android:id="@+id/mainlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/first_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_edittext"
                android:paddingTop="2dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:inputType="textPersonName"
                    android:paddingEnd="0dp"
                    android:paddingStart="8dp"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/last_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/last_name"
                android:layout_marginTop="10dp" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:inputType="textPersonName"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginTop="10dp" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:inputType="textEmailAddress"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginTop="10dp" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:inputType="textPassword"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/confirm_password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:layout_marginTop="10dp" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:inputType="textPassword"
                    />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/address_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:layout_marginTop="10dp" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:inputType="textPostalAddress"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/country_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/country"
                android:layout_marginTop="10dp" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/state_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state"
                android:layout_marginTop="10dp" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lga_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lga"
                android:layout_marginTop="10dp" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_lga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:inputType="textPostalAddress"
                    />

            </android.support.design.widget.TextInputLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="1dp"
                android:id="@+id/btnLinearLayout"  >

                <Button
                    android:text="@string/sign_up"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSignUp"
                    android:background="@color/colorAccent"
                    android:textColor="@color/colorPrimary"
                    android:textSize="22sp"
                    android:layout_margin="20dp"
                    android:layout_weight="42.12"/>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</ScrollView>