<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container_body"
    xmlns:android.support.design="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground">

    <android.support.v7.widget.CardView
        android.support.design:cardElevation="3dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/loginLayout"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:background="@drawable/rounded_edittext"
                android:padding="10dp"
                android:paddingTop="8dp">

                <EditText
                    android:id="@+id/et_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:inputType="textEmailAddress"
                    android:paddingEnd="0dp"
                    android:paddingStart="8dp"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/login_password_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:padding="10dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/password" >

                    <EditText
                        android:id="@+id/et_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:inputType="textPassword"
                        android:paddingEnd="0dp"
                        android:paddingStart="8dp"
                        />

            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="1dp"
                android:id="@+id/btnLinearLayout"  >

                <Button
                    android:text="@string/login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnLogin"
                    android:background="@color/colorAccent"
                    android:textColor="@color/colorPrimary"
                    android:textSize="22sp"
                    android:layout_margin="20dp"
                    android:layout_weight="42.12"/>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</ScrollView>
